+ package.json script "start"

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
+    "start": "node server.js",
     "div": "nodemon server.js"
   },
   "author": "",
