--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "js-base64": "^3.7.7",
+    "node-telegram-bot-api": "^0.65.1",
     "nodemon": "^3.1.0",
     "pg": "^8.11.5"
   }
